fix when sections should be visible fix chart centering

--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -44,6 +44,9 @@ h2 {
 }
 
 h3 {
+  background-color: #d5d5d5;
+  text-align: center;
+  color: white;
   margin: 0 10px 0 10px;
 }
 
